syntax = "proto3";

option csharp_namespace = "GrpcService1";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHelloRegular (HelloRequest) returns (HelloReply);
  rpc SayHelloYet (HelloRequest) returns (HelloReply);  
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  string data = 2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
